--- a/index.html
+++ b/index.html
@@ -2,77 +2,36 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color:darkgreen
-        }
-        h1 {
-            text-align: center;
-        }
-
-        #content {
-            background-color: aqua;
-            margin: auto;
-            width: 75%;
-            padding: 10px;
-            border-radius: 10px;
-        }
-        #BigContainer {
-            background-color: #8fffff;
-            display: flex;
-            justify-content: space-evenly;
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .SmallBox {
-            background-color: white; 
-            margin: 10px;
-            padding: 4px;
-        }
-        #SmallContainer {
-            width: 40%;
-        }
-        .BigBox {
-            background-color: rgb(255, 255, 255);
-            margin: 10px;
-            width: 40%;
-            padding: 4px;
-        }
-        .allBoxes {
-            border: 1px solid black;
-            box-shadow: 5px 5px 1px black;
-        }
-    </style>
+    <title>Welcome</title>
 </head>
 
 <body>
-    <div id="content">
-        <h1>Header</h1>
-        <div id="BigContainer">
-            <div id="SmallContainer">
-                <div class="SmallBox allBoxes">
-                    <h2>About</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi cupiditate a vero ipsa cum dolorum nostrum porro illo, nam, itaque fugit distinctio suscipit harum sint neque ullam nihil laboriosam?</p>
-                </div>
-                <div class="SmallBox allBoxes">
-                    <h2>Game</h2>
-                    <p>click <a href="game/index.html">here</a> to play</p>
-                </div>
-                <div class="SmallBox allBoxes">
-                    <h2>Images</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas corporis vel blanditiis error, ut in voluptatibus quasi fuga molestias fugit impedit odit cum veritatis rem itaque adipisci minima placeat omnis.</p>
-                </div>
-                <div class="BigBox allBoxes">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse reiciendis enim, illum necessitatibus quod optio maiores veritatis voluptas, veniam fugiat, ducimus consequuntur amet saepe accusamus earum impedit nam beatae non.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ipsum numquam natus in incidunt reprehenderit deleniti, optio quasi eligendi quo tenetur iure harum iusto fuga. Ex laborum aliquid voluptates harum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic nemo odit tempora rem nostrum, vitae sunt quo sequi. Rem quos earum facere, ullam quasi dignissimos quas quae adipisci eius sunt.</p>
-                </div>
-            </div>
+    <div id="div1">
+        <h1 id="HomeHeader">Home - Welcome To My Website!</h1>
+        <div id="Links">
+            <h3>View other parts of my website:</h3>
+            <ul>
+                <a href="about.html">About Me</a>
+                <a href="game.html">My Game</a>
+            </ul>
+        </div>
+        <div id="About1">
+            <h2 id="HomeHeader">About This Website</h2>
+            <p id="p1">Welcome to my website! If you don't know who I am, I recommend to view the About Me page using
+                the link at the top of this page. This website is sort of a portfolio from what I have learned in HTML
+                throughout the 4th quarter this year. Here you will find my game that I made earlier in the 4th quarter.
+                I wil also have an about page below this one to describe my life and what my hobbies are. I hope you can
+                enjoy reading my website!</p>
+        </div>
+        <div id="Extras">
+            <h2 id="HomeHeader">Extras</h2>
+            <p id="p2">This website was created for my final project in my 9th grade programming class.</p>
         </div>
     </div>
+
 </body>
 
 </html>
