--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 
 <body>
@@ -27,6 +27,8 @@
                 parents. At school, I have
                 above average grades and I plan on going to college for a computer related degree (I don't know which
                 one yet).</p>
+                <img src="Skyline.jpg" alt="Image didn't load. This was supposed to be an image of the Philadelphia Skyline.">
+                <p id="p4">The Philly Skyline <a href="https://t4.ftcdn.net/jpg/02/25/96/87/360_F_225968794_4wwf2iFHps5J1vHEGEOm0J5uWjPOZ6yU.jpg">(Image Source)</a></p>
         </div>
         <div id="Extras">
             <h2 id="AboutHeader">Extras</h2>
