--- a/game.html
+++ b/game.html
@@ -25,6 +25,8 @@
                 progress to a certain point in the
                 game... Ok, I'm not gonna spoil anymore, you have to play the game to find
                 out what happens.</p>
+                <img src="Screenshot 2024-05-06 104511.png" alt="Image didn't load. This was supposed to be an image of the Boulder Pass.">
+                <p id="p6">Image of Boulder Pass, the first obstacle of the game</p>
         </div>
         <div id="Extras">
             <h2 id="GameHeader">Link</h2>
