--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <div id="About1">
             <h2 id="HomeHeader">About This Website</h2>
             <p id="p1">Welcome to my website! If you don't know who I am, I recommend to view the About Me page using
-                the link at the top of this page. This website is sort of a portfolio from what I have learned in HTML
-                throughout the 4th quarter this year. Here you will find my game that I made earlier in the 4th quarter.
-                I wil also have an about page below this one to describe my life and what my hobbies are. I hope you can
+                the link at the top of this page. This website is sort of a portfolio from what I have learned in HTML and CSS
+                throughout the 4th quarter this year. Here you will also find my game that I made earlier in the 4th quarter.
+                I hope you can
                 enjoy reading my website!</p>
+                <img src="Welcome-PNG-Download-Image.png" alt="Image didn't load. It said Welcome.">
+                <p id="p2"><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngall.com%2Fwelcome-word-png%2F&psig=AOvVaw275jz0c1AFM7hGsTkCVkFY&ust=1715189688328000&source=images&cd=vfe&opi=89978449&ved=0CBIQjhxqFwoTCNjPitSJ_IUDFQAAAAAdAAAAABAE">(Image Source)</a></p>
         </div>
         <div id="Extras">
             <h2 id="HomeHeader">Extras</h2>
